# blur_omp

./: .gitignore  CMakeLists.txt  image_utils.c  image_utils.h  main.c  readme.txt
report/: graphics.xlsx  report_openmp.tex
